Experimental change to add type checking to flight map storage.